thinking this might work

--- a/index.html
+++ b/index.html
@@ -27,17 +27,27 @@
         </h1>
     </header>
 
-    <div class="centerItem margin10">
+    <nav class="navbar navBackground row">
+        <!-- <a class="navbar-brand" href="index.html"> -->
+          <!-- <img src="assets/21687-escudo-garnica.jpeg" width="30" height="30" margin="10" class="d-inline-block align-top" alt="Escudo del Apellido Garnica"> Daniel Perez Garnica</a> -->
+          <div class=" row">
+              <a class="nav-link abut" href="#services">Work</a>
+            <a class="nav-link abut" href="#someResults">Some Results</a>
+            <a class="nav-link abut" href="#contact">Contact</a>
+          </div>
+    </nav>
+
+    <div class="centerItem margin10 aboutNPic">
         <h2>
             We can add videos too!
         </h2>
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" width="365" height="315" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" allowfullscreen></iframe>
     </div>
-
-    <div class="row margin10">
+<div class="margin10 aboutNPic">
+    <div class="row margin10 aboutNPic">
         <img class="imageWidth" src="./assets/images/someWorks.jpg" alt="someWorks">
             <div class="centerItem textWidth">
-                <h3>Some description about services</h3>
+                <h3 id="services" class="margin10">Some services</h3>
                 <h6 class="">
                     Here's where we would add your business description, as well as any 
                     other services you might be able to provide to your clients
@@ -45,9 +55,9 @@
             </div>
     </div>
 
-    <div class="row margin10">
+    <div class="row margin10 aboutNPic">
         <div class="centerItem textWidth">
-        <h3>Some Results</h3>
+        <h3 id="someResults">Some Results</h3>
         <h6>
             Here's where we could add some reviews or seasonal specials. Perhaps something 
             around the season that's special for your particular industry
@@ -55,9 +65,10 @@
         </div>
         <img class="imageWidth" src="./assets/images/someResults.jpeg.webp" alt="someResults">
     </div>
+</div>
     
     <nav class="contact-me-container centerItem margin10">
-        <h1 class="contact-me-list" id="contact-me">Contact Me!</h1>
+        <h1 class="contact-me-list" id="contact">Contact Me!</h1>
         <ul class="smList noList row">
             <li><a href="https://www.facebook.com/profile.php?id=100010868464967" class="fa fa-facebook"> Facebook</a></li>
             <li><a href="https://twitter.com/daniel_pega0716" class="fa fa-twitter"> Twitter</a></li>
