its great and works beautifully

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
         <h2>
             We can add videos too!
         </h2>
+        <br>
             <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" width="365" height="315" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" allowfullscreen></iframe>
     </div>
 <div class="margin10 aboutNPic">
     <div class="row margin10 aboutNPic">
-        <img class="imageWidth" src="./assets/images/someWorks.jpg" alt="someWorks">
+        <img class="imageWidth picSize" src="./assets/images/someWorks.jpg" alt="someWorks">
             <div class="centerItem textWidth">
                 <h3 id="services" class="margin10">Some services</h3>
                 <h6 class="">
@@ -63,7 +64,7 @@
             around the season that's special for your particular industry
         </h6>
         </div>
-        <img class="imageWidth" src="./assets/images/someResults.jpeg.webp" alt="someResults">
+        <img class="imageWidth picSize" src="./assets/images/someResults.jpeg.webp" alt="someResults">
     </div>
 </div>
     
