with form submit

--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
 </head>
 <body>
 
+    <!-- HEADER BEGINNING -->
+
     <header class="centerItem margin10">
         <h1>
             Your Business Name
         </h1>
     </header>
+
+    <!-- HEADER ENDING -->
+
+
+    <!-- NAVBAR BEGINNING -->
 
     <nav class="navbar navBackground row">
         <!-- <a class="navbar-brand" href="index.html"> -->
@@ -37,6 +44,10 @@
           </div>
     </nav>
 
+    <!-- NAVBAR ENDING -->
+
+    <!-- VIDEO BEGINNING -->
+
     <div class="centerItem margin10 aboutNPic">
         <h2>
             We can add videos too!
@@ -44,6 +55,10 @@
         <br>
             <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" width="365" height="315" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" allowfullscreen></iframe>
     </div>
+
+    <!-- VIDEO ENDING -->
+
+    <!-- WORKS AND SERVICES BEGINNING -->
 <div class="margin10 aboutNPic">
     <div class="row margin10 aboutNPic">
         <img class="imageWidth picSize" src="./assets/images/someWorks.jpg" alt="someWorks">
@@ -67,19 +82,45 @@
         <img class="imageWidth picSize" src="./assets/images/someResults.jpeg.webp" alt="someResults">
     </div>
 </div>
+
+    <!-- WORKS AND SERVICES ENDING -->
+
+    <!-- FORM SUBMIT BEGINNING -->
+    
+    <div class="centerItem">
+        <br>
+        <h1>Email us!</h1>
+
+        <form action="mailto:pegamultiworks@gmail.com" method="post" enctype="text/plain">
+            Name:<br>
+            <input type="text" name="name"><br>
+            E-mail:<br>
+            <input type="text" name="mail"><br>
+            Comment:<br>
+            <input type="text" name="comment" size="50"><br><br>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
+            </form>
+        </div>
+
+    <!-- FORM SUBMIT ENDING -->
+
+    <!-- CONTACT BEGINNING -->
     
     <nav class="contact-me-container centerItem margin10">
         <h1 class="contact-me-list" id="contact">Contact Me!</h1>
         <ul class="smList noList row">
-            <li><a href="https://www.facebook.com/profile.php?id=100010868464967" class="fa fa-facebook"> Facebook</a></li>
+            <li><a href="https://www.facebook.com/pega.unlimited" class="fa fa-facebook"> Facebook</a></li>
             <li><a href="https://twitter.com/daniel_pega0716" class="fa fa-twitter"> Twitter</a></li>
             <li><a href="https://www.instagram.com/danielpega_/" class="fa fa-instagram"> Instagram</a></li>
-            <li><a href="https://www.linkedin.com/in/daniel-perez-garnica-10b956159/" class="fa fa-linkedin"> Linkedin</a></li>
+            <!-- <li><a href="https://www.linkedin.com/in/daniel-perez-garnica-10b956159/" class="fa fa-linkedin"> Linkedin</a></li> -->
             <div class="phone">
-              <li><a href="tel:629-239-5033" class="fa fa-phone"> (615) 604-0716</a></li>
+              <li><a href="tel:629-220-9083" class="fa fa-phone"> (629) 220-9083</a></li>
             </div>
         </ul>  
       </nav>
+
+      <!-- CONTACT ENDING -->
 
 
 </body>
