--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <br>
         <h1>Email us!</h1>
 
-        <form action="mailto:pegamultiworks@gmail.com" method="post" enctype="text/plain">
+        <form class="centerItem" action="mailto:pegamultiworks@gmail.com" method="post" enctype="text/plain">
             Name:<br>
             <input type="text" name="name"><br>
             E-mail:<br>
             <input type="text" name="mail"><br>
             Comment:<br>
-            <input type="text" name="comment" size="50"><br><br>
+            <input type="text" name="comment"><br><br>
             <input type="submit" value="Send">
             <input type="reset" value="Reset">
             </form>
